nicer button images + no text wrapping in headers + buggy fab.

--- a/frontend/client-app/src/app/components/courses/courses.component.css
+++ b/frontend/client-app/src/app/components/courses/courses.component.css
@@ -8,14 +8,13 @@ h4 {
 
 #add-fab {
   position:fixed;
-  width:60px;
-  height:60px;
   bottom:40px;
   right:40px;
   display: none;
+	text-align:center;
 }
 
-td {
+th {
   white-space: nowrap;
 }
 
