--- a/frontend/client-app/src/app/components/lecturers/lecturers.component.css
+++ b/frontend/client-app/src/app/components/lecturers/lecturers.component.css
@@ -8,14 +8,12 @@ h4 {
 
 #add-fab {
   position:fixed;
-  width:60px;
-  height:60px;
   bottom:40px;
   right:40px;
   display: none;
 }
 
-td {
+th {
   white-space: nowrap;
 }
 
